Edited Take Home Ex01_Part 2

--- a/Take-Home_Ex/Take-Home_Ex01/Take-Home_Ex01.qmd
+++ b/Take-Home_Ex/Take-Home_Ex01/Take-Home_Ex01.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Take-Home_Ex01"
+title: "Take-Home_Ex01_Part1"
 author: "Andre Ong Jia Kang"
 date: "May 1, 2025"
 date-modified: "last-modified"
