--- a/Hands-on_Ex/Hands-on_Ex05/Hands-on_Ex05.qmd
+++ b/Hands-on_Ex/Hands-on_Ex05/Hands-on_Ex05.qmd
@@ -9,7 +9,7 @@ format:
     code-summary: "Code"
 ---
 
-# 1): Modelling, Visualising and Analysing Network Data with R
+# 27. Modelling, Visualising and Analysing Network Data with R
 
 ## 27.1 Overview
 
@@ -41,10 +41,12 @@ The data sets used in this hands-on exercise is from an oil exploration and extr
 - GAStech-email_edges.csv which consists of two weeks of 9063 emails correspondances between 55 employees.
 
 ![](images/edges.jpg){fig-align="center"}
+
 ### 27.3.2 The nodes data
 - GAStech_email_nodes.csv which consist of the names, department and title of the 55 employees.
 
 ![](images/nodes.jpg){fig-align="center"}
+
 ### 27.3.3 Importing network data from files
 
 ```{r}
@@ -116,7 +118,7 @@ Table below shows the data structure of the reformatted GAStech_edges data frame
 ```{r}
 glimpse(GAStech_edges_aggregated)
 ```
-## 27.4 reating network objects using tidygraph
+## 27.4 Creating network objects using tidygraph
 
 In this section, I will create a graph data model by using tidygraph package. It provides a tidy API for graph/network manipulation. While network data itself is not tidy, it can be envisioned as two tidy tables, one for node data and one for edge data. tidygraph provides a way to switch between the two tables and provides dplyr verbs for manipulating them. Furthermore it provides access to a lot of graph algorithms with return values that facilitate their use in a tidy workflow.
 
@@ -167,13 +169,11 @@ GAStech_graph <- tbl_graph(nodes = GAStech_nodes,
 GAStech_graph
 ```
 
-### 27.4.5 Reviewing the output tidygraph’s graph object
-
 - The output above reveals that GAStech_graph is a tbl_graph object with 54 nodes and 4541 edges.
 - The command also prints the first six rows of “Node Data” and the first three of “Edge Data”.
 - It states that the Node Data is **active**. The notion of an active tibble within a tbl_graph object makes it possible to manipulate the data in one tibble at a time.
 
-### 27.4.6 Changing the active object
+### 27.4.5 Changing the active object
 
 The nodes tibble data frame is activated by default, but we can change which tibble data frame is active with the activate() function. Thus, if we wanted to rearrange the rows in the edges tibble to list those with the highest “weight” first, we could use activate() and then arrange().
 
@@ -430,4 +430,603 @@ Things to learn from the code chunks above:
 
 - *geom_edge_link* draws edges in the simplest way - as straight lines between the start and end nodes. But, it can do more that that. In the example above, argument width is used to map the width of the line in proportional to the Weight attribute and argument alpha is used to introduce opacity on the line.
 
+## 27.6 Creating facet graphs
 
+Another very useful feature of **ggraph** is faceting. In visualising network data, this technique can be used to reduce edge over-plotting in a very meaning way by spreading nodes and edges out based on their attributes. In this section, I will use faceting technique to visualise network data.
+
+There are three functions in ggraph to implement faceting, they are:
+
+- [facet_nodes()](https://ggraph.data-imaginist.com/reference/facet_nodes.html) whereby edges are only draw in a panel if both terminal nodes are present here,
+- [facet_edges()](https://ggraph.data-imaginist.com/reference/facet_edges.html) whereby nodes are always drawn in al panels even if the node data contains an attribute named the same as the one used for the edge facetting, and
+- [facet_graph()](https://ggraph.data-imaginist.com/reference/facet_graph.html) faceting on two variables simultaneously.
+
+### 27.6.1 Working with facet_edges()
+
+In the code chunk below, facet_edges() is used. Before getting started, it is advisable to read it’s reference guide at least once.
+
+::: panel-tabset
+#### Plot
+
+```{r, fig.width=10, fig.height=10}
+#| echo: false
+
+set_graph_style()
+
+g <- ggraph(GAStech_graph, 
+            layout = "nicely") + 
+  geom_edge_link(aes(width=Weight), 
+                 alpha=0.2) +
+  scale_edge_width(range = c(0.1, 5)) +
+  geom_node_point(aes(colour = Department), 
+                  size = 2)
+
+g + facet_edges(~Weekday)
+```
+
+#### Code
+
+```{r, fig.width=10, fig.height=10}
+#| code-fold: false
+#| code-summary: "Code"
+#| eval: false
+
+set_graph_style()
+
+g <- ggraph(GAStech_graph, 
+            layout = "nicely") + 
+  geom_edge_link(aes(width=Weight), 
+                 alpha=0.2) +
+  scale_edge_width(range = c(0.1, 5)) +
+  geom_node_point(aes(colour = Department), 
+                  size = 2)
+
+g + facet_edges(~Weekday)
+```
+:::
+
+Changing the legend positions to the bottom:
+
+::: panel-tabset
+#### Plot
+
+```{r, fig.width=10, fig.height=10}
+#| echo: false
+
+set_graph_style()
+
+g <- ggraph(GAStech_graph, 
+            layout = "nicely") + 
+  geom_edge_link(aes(width=Weight), 
+                 alpha=0.2) +
+  scale_edge_width(range = c(0.1, 5)) +
+  geom_node_point(aes(colour = Department), 
+                  size = 2) +
+  theme(legend.position = 'bottom')
+  
+g + facet_edges(~Weekday)
+```
+
+#### Code
+
+```{r, fig.width=10, fig.height=10}
+#| code-fold: false
+#| code-summary: "Code"
+#| eval: false
+
+set_graph_style()
+
+g <- ggraph(GAStech_graph, 
+            layout = "nicely") + 
+  geom_edge_link(aes(width=Weight), 
+                 alpha=0.2) +
+  scale_edge_width(range = c(0.1, 5)) +
+  geom_node_point(aes(colour = Department), 
+                  size = 2) +
+  theme(legend.position = 'bottom')
+  
+g + facet_edges(~Weekday)
+```
+:::
+
+### 27.6.2 A framed facet graph
+
+The code chunk below adds frame to each graph.
+
+::: panel-tabset
+#### Plot
+
+```{r, fig.width=10, fig.height=10}
+#| echo: false
+
+set_graph_style() 
+
+g <- ggraph(GAStech_graph, 
+            layout = "nicely") + 
+  geom_edge_link(aes(width=Weight), 
+                 alpha=0.2) +
+  scale_edge_width(range = c(0.1, 5)) +
+  geom_node_point(aes(colour = Department), 
+                  size = 2)
+  
+g + facet_edges(~Weekday) +
+  th_foreground(foreground = "grey80",  
+                border = TRUE) +
+  theme(legend.position = 'bottom')
+```
+
+#### Code
+
+```{r, fig.width=10, fig.height=10}
+#| code-fold: false
+#| code-summary: "Code"
+#| eval: false
+
+set_graph_style() 
+
+g <- ggraph(GAStech_graph, 
+            layout = "nicely") + 
+  geom_edge_link(aes(width=Weight), 
+                 alpha=0.2) +
+  scale_edge_width(range = c(0.1, 5)) +
+  geom_node_point(aes(colour = Department), 
+                  size = 2)
+  
+g + facet_edges(~Weekday) +
+  th_foreground(foreground = "grey80",  
+                border = TRUE) +
+  theme(legend.position = 'bottom')
+```
+:::
+
+### 27.6.3 Working with facet_nodes()
+
+In the code chunkc below, facet_nodes() is used. Before getting started, it is advisable to read it’s reference guide at least once.
+
+::: panel-tabset
+#### Plot
+
+```{r, fig.width=10, fig.height=10}
+#| echo: false
+
+set_graph_style()
+
+g <- ggraph(GAStech_graph, 
+            layout = "nicely") + 
+  geom_edge_link(aes(width=Weight), 
+                 alpha=0.2) +
+  scale_edge_width(range = c(0.1, 5)) +
+  geom_node_point(aes(colour = Department), 
+                  size = 2)
+  
+g + facet_nodes(~Department)+
+  th_foreground(foreground = "grey80",  
+                border = TRUE) +
+  theme(legend.position = 'bottom')
+```
+
+#### Code
+
+```{r, fig.width=10, fig.height=10}
+#| code-fold: false
+#| code-summary: "Code"
+#| eval: false
+
+set_graph_style()
+
+g <- ggraph(GAStech_graph, 
+            layout = "nicely") + 
+  geom_edge_link(aes(width=Weight), 
+                 alpha=0.2) +
+  scale_edge_width(range = c(0.1, 5)) +
+  geom_node_point(aes(colour = Department), 
+                  size = 2)
+  
+g + facet_nodes(~Department)+
+  th_foreground(foreground = "grey80",  
+                border = TRUE) +
+  theme(legend.position = 'bottom')
+```
+:::
+
+## 27.7 Network Metrics Analysis
+
+### 27.7.1 Computing centrality indices
+
+Centrality measures are a collection of statistical indices use to describe the relative important of the actors are to a network. There are four well-known centrality measures, namely: degree, betweenness, closeness and eigenvector. It is beyond the scope of this hands-on exercise to cover the principles and mathematics of these measure here. Students are encouraged to refer to *Chapter 7: Actor Prominence of* **A User’s Guide to Network Analysis in R** to gain better understanding of theses network measures.
+
+::: panel-tabset
+#### Plot
+
+```{r, fig.width=10, fig.height=10}
+#| echo: false
+
+g <- GAStech_graph %>%
+  mutate(betweenness_centrality = centrality_betweenness()) %>%
+  ggraph(layout = "fr") + 
+  geom_edge_link(aes(width=Weight), 
+                 alpha=0.2) +
+  scale_edge_width(range = c(0.1, 5)) +
+  geom_node_point(aes(colour = Department,
+            size=betweenness_centrality))
+g + theme_graph()
+```
+
+#### Code
+
+```{r, fig.width=10, fig.height=10}
+#| code-fold: false
+#| code-summary: "Code"
+#| eval: false
+
+g <- GAStech_graph %>%
+  mutate(betweenness_centrality = centrality_betweenness()) %>%
+  ggraph(layout = "fr") + 
+  geom_edge_link(aes(width=Weight), 
+                 alpha=0.2) +
+  scale_edge_width(range = c(0.1, 5)) +
+  geom_node_point(aes(colour = Department,
+            size=betweenness_centrality))
+g + theme_graph()
+```
+:::
+
+Things to learn from the code chunk above:
+
+- mutate() of **dplyr** is used to perform the computation.
+- the algorithm used, on the other hand, is the *centrality_betweenness()* of **tidygraph**.
+
+### 27.7.2 Visualising network metrics
+
+It is important to note that from **ggraph v2.0** onward tidygraph algorithms such as centrality measures can be accessed directly in ggraph calls. This means that it is no longer necessary to precompute and store derived node and edge centrality measures on the graph in order to use them in a plot.
+
+::: panel-tabset
+#### Plot
+
+```{r, fig.width=10, fig.height=10}
+#| echo: false
+
+g <- GAStech_graph %>%
+  ggraph(layout = "fr") + 
+  geom_edge_link(aes(width=Weight), 
+                 alpha=0.2) +
+  scale_edge_width(range = c(0.1, 5)) +
+  geom_node_point(aes(colour = Department, 
+                      size = centrality_betweenness()))
+g + theme_graph()
+```
+
+#### Code
+
+```{r, fig.width=10, fig.height=10}
+#| code-fold: false
+#| code-summary: "Code"
+#| eval: false
+
+g <- GAStech_graph %>%
+  ggraph(layout = "fr") + 
+  geom_edge_link(aes(width=Weight), 
+                 alpha=0.2) +
+  scale_edge_width(range = c(0.1, 5)) +
+  geom_node_point(aes(colour = Department, 
+                      size = centrality_betweenness()))
+g + theme_graph()
+```
+:::
+
+### 27.7.3 Visualising Community
+
+tidygraph package inherits many of the community detection algorithms imbedded into igraph and makes them available to us, including *Edge-betweenness (group_edge_betweenness), Leading eigenvector (group_leading_eigen), Fast-greedy (group_fast_greedy), Louvain (group_louvain), Walktrap (group_walktrap), Label propagation (group_label_prop), InfoMAP (group_infomap), Spinglass (group_spinglass)*, and Optimal (group_optimal). Some community algorithms are designed to take into account direction or weight, while others ignore it. Use this [link](https://tidygraph.data-imaginist.com/reference/group_graph.html) to find out more about community detection functions provided by tidygraph,
+
+In the code chunk below *group_edge_betweenness()* is used.
+
+::: panel-tabset
+#### Plot
+
+```{r, fig.width=10, fig.height=10}
+#| echo: false
+
+g <- GAStech_graph %>%
+  mutate(community = as.factor(
+    group_edge_betweenness(
+      weights = Weight, 
+      directed = TRUE))) %>%
+  ggraph(layout = "fr") + 
+  geom_edge_link(
+    aes(
+      width=Weight), 
+    alpha=0.2) +
+  scale_edge_width(
+    range = c(0.1, 5)) +
+  geom_node_point(
+    aes(colour = community))  
+
+g + theme_graph()
+```
+
+#### Code
+
+```{r, fig.width=10, fig.height=10}
+#| code-fold: false
+#| code-summary: "Code"
+#| eval: false
+
+g <- GAStech_graph %>%
+  mutate(community = as.factor(
+    group_edge_betweenness(
+      weights = Weight, 
+      directed = TRUE))) %>%
+  ggraph(layout = "fr") + 
+  geom_edge_link(
+    aes(
+      width=Weight), 
+    alpha=0.2) +
+  scale_edge_width(
+    range = c(0.1, 5)) +
+  geom_node_point(
+    aes(colour = community))  
+
+g + theme_graph()
+```
+:::
+
+In order to support effective visual investigation, the community network above has been revised by using [geom_mark_hull()](https://ggforce.data-imaginist.com/reference/geom_mark_hull.html) of [ggforce](https://ggforce.data-imaginist.com/) package.
+
+::: {.callout-warning title="Important"}
+Please be reminded that to install and include [ggforce](https://ggforce.data-imaginist.com/) and [concaveman](https://www.rdocumentation.org/packages/concaveman/versions/1.1.0/topics/concaveman) packages before running the code chunk below.
+:::
+
+::: panel-tabset
+#### Plot
+
+```{r, fig.width=10, fig.height=10}
+#| echo: false
+
+g <- GAStech_graph %>%
+  activate(nodes) %>%
+  mutate(community = as.factor(
+    group_optimal(weights = Weight)),
+         betweenness_measure = centrality_betweenness()) %>%
+  ggraph(layout = "fr") +
+  geom_mark_hull(
+    aes(x, y, 
+        group = community, 
+        fill = community),  
+    alpha = 0.2,  
+    expand = unit(0.3, "cm"),  # Expand
+    radius = unit(0.3, "cm")  # Smoothness
+  ) + 
+  geom_edge_link(aes(width=Weight), 
+                 alpha=0.2) +
+  scale_edge_width(range = c(0.1, 5)) +
+  geom_node_point(aes(fill = Department,
+                      size = betweenness_measure),
+                      color = "black",
+                      shape = 21)
+  
+g + theme_graph()
+```
+
+#### Code
+
+```{r, fig.width=10, fig.height=10}
+#| code-fold: false
+#| code-summary: "Code"
+#| eval: false
+
+g <- GAStech_graph %>%
+  activate(nodes) %>%
+  mutate(community = as.factor(
+    group_optimal(weights = Weight)),
+         betweenness_measure = centrality_betweenness()) %>%
+  ggraph(layout = "fr") +
+  geom_mark_hull(
+    aes(x, y, 
+        group = community, 
+        fill = community),  
+    alpha = 0.2,  
+    expand = unit(0.3, "cm"),  # Expand
+    radius = unit(0.3, "cm")  # Smoothness
+  ) + 
+  geom_edge_link(aes(width=Weight), 
+                 alpha=0.2) +
+  scale_edge_width(range = c(0.1, 5)) +
+  geom_node_point(aes(fill = Department,
+                      size = betweenness_measure),
+                      color = "black",
+                      shape = 21)
+  
+g + theme_graph()
+```
+:::
+
+## 27.8 Building Interactive Network Graph with visNetwork
+
+- visNetwork() is a R package for network visualization, using vis.js javascript library.
+
+- visNetwork() function uses a nodes list and edges list to create an interactive graph.
+
+  - The nodes list must include an “id” column, and the edge list must have “from” and “to” columns.
+  - The function also plots the labels for the nodes, using the names of the actors from the “label” column in the node list.
+
+- The resulting graph is fun to play around with.
+
+  - I can move the nodes and the graph will use an algorithm to keep the nodes properly spaced.
+  - I can also zoom in and out on the plot and move it around to re-center it.
+
+### 27.8.1 Data preparation
+```{r}
+GAStech_edges_aggregated <- GAStech_edges %>%
+  left_join(GAStech_nodes, by = c("sourceLabel" = "label")) %>%
+  rename(from = id) %>%
+  left_join(GAStech_nodes, by = c("targetLabel" = "label")) %>%
+  rename(to = id) %>%
+  filter(MainSubject == "Work related") %>%
+  group_by(from, to) %>%
+    summarise(weight = n()) %>%
+  filter(from!=to) %>%
+  filter(weight > 1) %>%
+  ungroup()
+```
+
+### 27.8.2 Plotting the first interactive network graph
+The code chunk below will be used to plot an interactive network graph by using the data prepared.
+```{r}
+visNetwork(GAStech_nodes, 
+           GAStech_edges_aggregated)
+```
+
+### 27.8.3 Working with layout
+
+In the code chunk below, Fruchterman and Reingold layout is used.
+
+::: panel-tabset
+#### Plot
+
+```{r, fig.width=10, fig.height=10}
+#| echo: false
+
+visNetwork(GAStech_nodes,
+           GAStech_edges_aggregated) %>%
+  visIgraphLayout(layout = "layout_with_fr") 
+```
+
+#### Code
+
+```{r, fig.width=10, fig.height=10}
+#| code-fold: false
+#| code-summary: "Code"
+#| eval: false
+
+visNetwork(GAStech_nodes,
+           GAStech_edges_aggregated) %>%
+  visIgraphLayout(layout = "layout_with_fr") 
+```
+:::
+
+Visit [Igraph](http://datastorm-open.github.io/visNetwork/igraph.html) to find out more about visIgraphLayout’s argument.
+
+### 27.8.4 Working with visual attributes - Nodes
+
+visNetwork() looks for a field called “group” in the nodes object and colour the nodes according to the values of the group field.
+
+The code chunk below rename Department field to group.
+
+```{r}
+GAStech_nodes <- GAStech_nodes %>%
+  rename(group = Department) 
+```
+
+When we rerun the code chunk below, visNetwork shades the nodes by assigning unique colour to each category in the group field.
+
+::: panel-tabset
+#### Plot
+
+```{r, fig.width=10, fig.height=10}
+#| echo: false
+
+visNetwork(GAStech_nodes,
+           GAStech_edges_aggregated) %>%
+  visIgraphLayout(layout = "layout_with_fr") %>%
+  visLegend() %>%
+  visLayout(randomSeed = 123)
+```
+
+#### Code
+
+```{r, fig.width=10, fig.height=10}
+#| code-fold: false
+#| code-summary: "Code"
+#| eval: false
+
+visNetwork(GAStech_nodes,
+           GAStech_edges_aggregated) %>%
+  visIgraphLayout(layout = "layout_with_fr") %>%
+  visLegend() %>%
+  visLayout(randomSeed = 123)
+```
+:::
+
+### 27.8.5 Working with visual attributes - Edges
+
+In the code run below *visEdges()* is used to symbolise the edges.
+- The argument arrows is used to define where to place the arrow.
+- The *smooth* argument is used to plot the edges using a smooth curve.
+
+::: panel-tabset
+#### Plot
+
+```{r, fig.width=10, fig.height=10}
+#| echo: false
+
+visNetwork(GAStech_nodes,
+           GAStech_edges_aggregated) %>%
+  visIgraphLayout(layout = "layout_with_fr") %>%
+  visEdges(arrows = "to", 
+           smooth = list(enabled = TRUE, 
+                         type = "curvedCW")) %>%
+  visLegend() %>%
+  visLayout(randomSeed = 123)
+```
+
+#### Code
+
+```{r, fig.width=10, fig.height=10}
+#| code-fold: false
+#| code-summary: "Code"
+#| eval: false
+
+visNetwork(GAStech_nodes,
+           GAStech_edges_aggregated) %>%
+  visIgraphLayout(layout = "layout_with_fr") %>%
+  visEdges(arrows = "to", 
+           smooth = list(enabled = TRUE, 
+                         type = "curvedCW")) %>%
+  visLegend() %>%
+  visLayout(randomSeed = 123)
+```
+:::
+
+Visit [Option](http://datastorm-open.github.io/visNetwork/edges.html) to find out more about visEdges’s argument.
+
+### 27.8.6 Interactivity
+
+In the code chunk below, *visOptions()* is used to incorporate interactivity features in the data visualisation.
+
+- The argument *highlightNearest* highlights nearest when clicking a node.
+- The argument *nodesIdSelection* adds an id node selection creating an HTML select element.
+
+::: panel-tabset
+#### Plot
+
+```{r, fig.width=10, fig.height=10}
+#| echo: false
+
+visNetwork(GAStech_nodes,
+           GAStech_edges_aggregated) %>%
+  visIgraphLayout(layout = "layout_with_fr") %>%
+  visOptions(highlightNearest = TRUE,
+             nodesIdSelection = TRUE) %>%
+  visLegend() %>%
+  visLayout(randomSeed = 123)
+```
+
+#### Code
+
+```{r, fig.width=10, fig.height=10}
+#| code-fold: false
+#| code-summary: "Code"
+#| eval: false
+
+visNetwork(GAStech_nodes,
+           GAStech_edges_aggregated) %>%
+  visIgraphLayout(layout = "layout_with_fr") %>%
+  visOptions(highlightNearest = TRUE,
+             nodesIdSelection = TRUE) %>%
+  visLegend() %>%
+  visLayout(randomSeed = 123)
+```
+:::
+
+Visit [Option](http://datastorm-open.github.io/visNetwork/options.html) to find out more about visOption’s argument.
+
+## 27.9 References
